session 유지 기능 추가 2